// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer should render children 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text>
    AppContainer Test
  </Text>
</RNCSafeAreaView>
`;

exports[`AppContainer should render loading view 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 6,
          "paddingRight": 6,
        },
        Object {
          "marginTop": 48,
        },
      ]
    }
  >
    <RNSpinkit
      color={4278190080}
      size={24}
      style={
        Array [
          Object {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
      type="Circle"
    />
  </View>
</RNCSafeAreaView>
`;
